--- a/tao.css
+++ b/tao.css
@@ -123,6 +123,21 @@ a {
   border: 0;
 }
 
+#traceEvent {
+  width: 10px;
+  vertical-align: -7px;
+}
+
+#simulationDescription{
+  font-size: 14px;
+  background-color: rgb(241, 242, 243);
+  color: inherit;
+  width: calc(100% - 30px);
+  padding: 5px 15px;
+  height: 100px;
+  border: 0;
+}
+
 .editor .code-editor {
   width: 100%;
   height: 200px;
