Fixed callback issue with deleteAnchor when loading from for loop Removed deleteAnchor from edge editor (param) Pending edges added Multiple edge highlighting bug fixed Optimized pending edges Added anchor to show which edge is currently being edited (if multiple edges)

--- a/tao.css
+++ b/tao.css
@@ -165,9 +165,13 @@ a {
 .editor .variables {
   background-color: rgb(228, 231, 232);
   padding: 5px 15px;
-  height: 90px;
+  height: 140px;
   line-height: 30px;
   margin-bottom: 2px;
+}
+
+.editor .paramDescription {
+  margin-top: 12px;
 }
 
 .editor ul li {
